--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,7 +6,7 @@
   --color-high-text: #ff5777;
   --color-tint: #ff8198;
   --color-background: #fff;
-  --font-size: 14px;
+  font-size: 100%;
   --line-height: 1.5;
 }
 
